Validating create user request.